--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "< Укажите здесь автора работы >",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.6.3",
+    "@types/validator": "^13.7.15",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.21.0",
@@ -25,8 +28,17 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "bcrypt": "^5.1.0",
+    "bcrypt-ts": "^3.0.0",
+    "celebrate": "^15.0.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "mongoose": "^6.5.0"
+    "express-winston": "^4.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.5.0",
+    "validator": "^13.9.0",
+    "winston": "^3.8.2"
   }
 }
