--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starterkits",
   "version": "1.0.0",
-  "description": "< Добавьте описание проекта в свободной форме >",
+  "description": "Project mesto backend",
   "main": "dist/app.js",
   "scripts": {
     "lint": "npx eslint src/**/*.ts",
@@ -10,10 +10,11 @@
     "start": "ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "< Укажите здесь автора работы >",
+  "author": "Vladislav Kireev",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.6.3",
@@ -28,7 +29,6 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@types/cookie-parser": "^1.4.3",
     "bcrypt": "^5.1.0",
     "bcrypt-ts": "^3.0.0",
     "celebrate": "^15.0.1",
